<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Menu Sehat Obesitas</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="nama">Nama</string>
    <string name="tinggi">Tinggi (cm)</string>
    <string name="berat">Berat (kg)</string>
    <string name="usia">Usia Anda (th)</string>
    <string name="jeniskelamin">Jenis Kelamin</string>
    <string name="gejala">Gejala</string>
    <string name="ada">Ada</string>
    <string name="tidak">Tidak</string>
    <string name="proses">Proses</string>
    <string name="inputdata">Input Data</string>
    <string name="rekomendasimakanan">Rekomendasi Makanan</string>
    <string name="rekomendasiolahraga">Rekomendasi Olahraga</string>
    <string name="isi">Aplikasi ini digunakan untuk membantu para penyandang obesitas dalam mengatur kebutuhan gizi yang diperlukan dalam pola rekomendasi diet yang tepat serta kegiatan olahraga yang dapat dilakukan. </string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="pilih_gejala">Masukkan Gejala Yang Dirasakan :</string>
    <string name="pesan">*)Ditemukan rekomendasi menu diet untuk anda. Pilih menu makanan untuk melihat detail menu.</string>
    <string name="pesan2"></string>
    <string name="sarapan">Sarapan</string>
    <string name="cemilan_pagi">Cemilan Pagi</string>
    <string name="makan_siang">Makan Siang</string>
    <string name="cemilan_siang">Cemilan Siang</string>
    <string name="makan_malam">Makan Malam</string>
    <string name="Cemilan_malam">Cemilan Malam</string>
    <string name="takaran">Takaran</string>
    <string name="menu">Menu</string>
    <string name="kembali">kembali</string>
    <string name="bali">Menu Utama</string>
    <string name="obesitas">Penentuan diet dan olahraga penyandang obesitas</string>
    <string name="title_activity_perhitungan_cbr">PerhitunganCBR</string>
    <string name="rasa">Apakah ada gejala yang dirasakan?</string>
    <string name="title_activity_konfirmasi">Konfirmasi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_menu">ListMenu</string>
    <string name="solusi">Tidak Ditemukan pilihan rekomendasi makanan untuk anda berdasarkan kasus yang anda masukkan. \n\n*)Pilih lanjut untuk menambahkan kasus baru.</string>
    
    <string name="nama_hint">Masukkan Nama Anda</string>
    <string name="tinggi_hint">Masukkan Tinggi Anda</string>    
    <string name="berat_hint">Masukkan Berat Badan Anda</string>
    <string name="usia_hint">Masukkan Usia Anda</string>
    <string name="gejala_hint">Pencarian gejala</string>
    <string name="solusi_hint">Masukkan Solusi</string>
    <string name="kalori_hint">Masukkan Jml Kalori</string>

	<string name="pilih_jenis">Pilih Jenis Kelamin</string>
    <string-array name="gender">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    
    <string name="pilih_solusi">Pilih Solusi Menu</string>
    <string-array name="sls_mn">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>
    
        <string name="pilih_olahraga">Pilih Jenis Olahraga</string>
    <string-array name="jns_olg">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
        <item>VI</item>
    </string-array>
 
</resources>